--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "body-scroll-lock": "^4.0.0-beta.0",
     "firebase": "^9.1.2",
     "firebase-hooks": "^0.0.1",
     "react": "^17.0.2",
